--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "vue": "^2.6.9",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
