--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@webpack-cli/init": "^0.1.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
