--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "my-vuejsapp",
+  "name": "takoyaki-front",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "webpack --config ./webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "@webpack-cli/init": "^0.1.3",
+    "@webpack-cli/init": "^0.1.5",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^2.0.1",
