Add scripts for development

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "scripts": {
     "build": "webpack --config ./webpack.dev.js",
+    "watch": "npm run build -- --watch",
+    "production": "npm run build -- --mode production",
+    "prod": "npm run production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
