--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "@mdi/font": "^3.5.95",
     "@webpack-cli/init": "^0.1.5",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue": "^2.6.9",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.9",
+    "vuetify": "^1.5.8",
+    "vuetify-loader": "^1.2.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
