--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.3.1",
     "@mdi/font": "^3.5.95",
     "@webpack-cli/init": "^0.1.5",
+    "applicationinsights-js": "^1.0.20",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
