--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@webpack-cli/init": "^0.1.5",
     "applicationinsights-js": "^1.0.20",
     "axios": "^0.18.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^2.0.1",
@@ -27,6 +28,7 @@
     "dotenv": "^7.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -34,12 +36,17 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue": "^2.6.9",
+    "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.9",
+    "vue-test-utils": "^1.0.0-beta.11",
     "vuetify": "^1.5.8",
     "vuetify-loader": "^1.2.1",
     "vuex": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "jest-vue-preprocessor": "^1.5.0"
   }
 }
