--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@mdi/font": "^3.5.95",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "@webpack-cli/init": "^0.1.5",
     "applicationinsights-js": "^1.0.20",
     "axios": "^0.18.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^2.0.1",
@@ -34,6 +39,7 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue": "^2.6.9",
+    "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.9",
     "vuetify": "^1.5.8",
@@ -41,5 +47,18 @@
     "vuex": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^vue$": "vue/dist/vue.common.js"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    }
   }
 }
