Make git ignore coverage dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,11 @@ language: node_js
 node_js:
   - 10.6.0
 
-script: npx webpack --config webpack.dev.js --mode production
+cache: npm
+
+script:
+  - npm run-script test
+  - npx webpack --config webpack.dev.js --mode production
 
 notifications:
   email: false
-
-deploy:
-  provider: pages
-  local-dir: dist/
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep-history: true
-  on:
-    branch: master
