Upgrade the latest vue-jest to use babel v7 series

--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@mdi/font": "^3.6.95",
     "@vue/test-utils": "^1.0.0-beta.29",
     "@webpack-cli/init": "^0.1.5",
     "applicationinsights-js": "^1.0.20",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
@@ -36,7 +36,7 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "vue": "^2.6.10",
-    "vue-jest": "^3.0.4",
+    "vue-jest": "^4.0.0-beta.2",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify": "^1.5.13",
